--- a/packages/docs/pages/lib/build-your-own.mdx
+++ b/packages/docs/pages/lib/build-your-own.mdx
@@ -135,8 +135,7 @@ An ExperimentOverride object is similar to an Experiment object, but only contai
 
 A Feature object consists of possible values plus rules for how to assign values to users.
 
-- **values** (`any[]`) - Array of all possible values for the feature
-- **defaultValue** (`number`) - The array index of values that should be the default (should use `0` if unspecified)
+- **defaultValue** (`any`) - The default value (should use `null` if not specified)
 - **rules** (`Rule[]`) - Array of Rule objects that determine when and how the defaultValue gets overridden
 
 ### FeatureRule
@@ -147,14 +146,14 @@ Force rules:
 
 - **type** (`string`) - Always set to `"force"`
 - **condition** (`Condition`) - Optional targeting condition
-- **value** (`number`) - The array index of values that should be assigned
+- **value** (`any`) - The value that should be assigned
 
 Experiment rules:
 
 - **type** (`string`) - Always set to `"experiment"`
+- **variations** (`any[]`) - The experiment variations. Required.
 - **condition** (`Condition`) - Optional targeting condition
-- **trackingKey** (`string`) - The globally unique tracking key for the experiment
-- **variations** (`number[]`) - The different array indexes on values that are part of the experiment (default to all of them)
+- **trackingKey** (`string`) - The globally unique tracking key for the experiment (default to the feature key)
 - **weights** (`number[]`) - How to weight traffic between variations. Must add to 1.
 - **coverage** (`number`) - What percent of users should be included in the experiment (between 0 and 1, inclusive)
 - **namespace** (`(string, number, number)`) - A tuple that contains the namespace identifier, plus a range of coverage for the experiment.
@@ -186,16 +185,13 @@ myFeature = growthbook.feature("my-feature");
 There are a few ordered steps to evaluate a feature
 
 1. If the key doesn't exist in `context.features`, return immediately (value = `null`, source = `unknownFeature`).
-2. If `values` are not specified for the feature, default to `[false, true]`.
-3. Loop through the feature rules (if any)
+2. Loop through the feature rules (if any)
    1. If the rule has a `condition` and it evaluates to false, skip this rule and continue to the next one
    2. If the rule type is force, return immediately (value = forced value, source = `force`)
    3. If the rule type is experiment, convert the rule to an Experiment object and run the experiment.
       ```ts
       const exp = {
-        variations: rule.variations
-          ? rule.variations.map((i) => values[i])
-          : values,
+        variations: rule.variations,
         trackingKey: rule.trackingKey || featureKey,
       };
       if (rule.coverage) exp.coverage = rule.coverage;
@@ -204,7 +200,7 @@ There are a few ordered steps to evaluate a feature
       if (rule.namespace) exp.namespace = rule.namespace;
       ```
    4. Run the experiment. If `result.inExperiment` is false, skip this rule and continue to the next one. Otherwise, return immediately (value = assigned variation, source = `experiment`)
-4. Return (value = defaultValue, source = `defaultValue`)
+3. Return (value = defaultValue or `null`, source = `defaultValue`)
 
 ## Running an Experiment
 
