Update react SDK, re-render when attributes change

--- a/packages/docs/pages/lib/js.mdx
+++ b/packages/docs/pages/lib/js.mdx
@@ -107,7 +107,7 @@ new GrowthBook({
   trackingCallback: (experiment, result) => {
     // Example using Segment.io
     analytics.track("Experiment Viewed", {
-      experimentId: experiment.trackingKey,
+      experimentId: experiment.key,
       variationId: result.variationId,
     });
   },
@@ -281,15 +281,15 @@ You can use the `weights` setting to control what percent of users get assigned 
 
 ##### Tracking Key
 
-When a user is assigned a variation, we call the `trackingCallback` function so you can record the exposure with your analytics event tracking system. By default, we use the feature id to identify the experiment, but this can be overridden if needed with the `trackingKey` setting:
+When a user is assigned a variation, we call the `trackingCallback` function so you can record the exposure with your analytics event tracking system. By default, we use the feature id to identify the experiment, but this can be overridden if needed with the `key` setting:
 
 ```js
 {
   "feature-1": {
     rules: [
       {
-        // Use "my-experiment" as the trackingKey instead of "feature-1"
-        trackingKey: "my-experiment",
+        // Use "my-experiment" as the key instead of "feature-1"
+        key: "my-experiment",
         variations: ["A", "B"]
       }
     ]
@@ -386,7 +386,7 @@ Instead of declaring all features up-front in the context and referencing them b
 
 ```js
 const { value } = growthbook.run({
-  trackingKey: "my-experiment",
+  key: "my-experiment",
   variations: ["red", "blue", "green"],
 });
 ```
@@ -418,7 +418,7 @@ const growthbook = new GrowthBook({
 // The inline experiment says to do a 50/50 split
 // Instead, everyone will be assigned "b" because of the override
 const {value} = growthbook.run({
-  trackingKey: "my-experiment",
+  key: "my-experiment",
   variations: ["a", "b"]
 })
 ```
@@ -435,7 +435,7 @@ const {
   hashAttribute,
   hashValue,
 } = growthbook.run({
-  trackingKey: "my-experiment",
+  key: "my-experiment",
   variations: ["A", "B"],
 });
 
