--- a/packages/docs/pages/lib/react.mdx
+++ b/packages/docs/pages/lib/react.mdx
@@ -1,14 +1,20 @@
 # GrowthBook React Client Library
 
+This is a thin wrapper on top of the [Javascript Library](/lib/js), so you might want to view those docs first to familiarize yourself with the basic classes and methods.
+
 ## Installation
 
-`yarn add @growthbook/growthbook-react`
+```
+yarn add @growthbook/growthbook-react
+```
 
 or
 
-`npm install --save @growthbook/growthbook-react`
+```
+npm install --save @growthbook/growthbook-react
+```
 
-## Quick Start
+## Quick Usage
 
 ### Step 1: Configure your app
 
@@ -16,20 +22,14 @@ or
 import { GrowthBook, GrowthBookProvider } from "@growthbook/growthbook-react";
 
 // Create a GrowthBook instance
-const growthbook = new GrowthBook({
-  // The attributes you want to use to assign variations
-  user: {
-    id: "123",
-  },
-  // Called every time the user is put into an experiment
-  trackingCallback: (experiment, result) => {
-    // Mixpanel, Segment, GA, or custom tracking
-    mixpanel.track("Experiment Viewed", {
-      experiment: experiment.key,
-      variation: result.variationId,
-    });
-  },
-});
+const growthbook = new GrowthBook();
+
+// Load feature definitions (from API, database, etc.)
+await fetch("https://s3.amazonaws.com/myBucket/features.json")
+  .then((res) => res.json())
+  .then((parsed) => {
+    growthbook.setFeatures(parsed);
+  });
 
 export default function App() {
   return (
@@ -40,9 +40,114 @@ export default function App() {
 }
 ```
 
-### Step 2: Run an experiment
+### Step 2: Start feature flagging!
 
-#### Hooks (recommended)
+There are a few ways to use feature flags in GrowthBook:
+
+#### useFeature hook
+
+```tsx
+import { useFeature } from "@growthbook/growthbook-react";
+
+export default function OtherComponent() {
+  // Boolean on/off flags
+  const newLogin = useFeature("new-login-form").on;
+
+  // Multivariate or string/JSON values
+  const buttonColor = useFeature("login-button-color").value || "blue";
+
+  if (newLogin) {
+    return <NewLogin color={buttonColor} />;
+  } else {
+    return <Login color={buttonColor} />;
+  }
+}
+```
+
+#### <IfFeatureEnabled>
+
+```tsx
+import { IfFeatureEnabled } from "@growthbook/growthbook-react";
+
+export default function OtherComponent() {
+  return (
+    <div>
+      <h1>Hello!</h1>
+      <IfFeatureEnabled feature="welcome-message">
+        <p>Welcome to our site!</p>
+      </IfFeatureEnabled>
+    </div>
+  );
+}
+```
+
+#### <FeatureString>
+
+```tsx
+import { FeatureString } from "@growthbook/growthbook-react";
+
+export default function OtherComponent() {
+  return (
+    <div>
+      <h1>
+        <FeatureString feature="site-h1" default="My Site" />
+      </h1>
+    </div>
+  );
+}
+```
+
+### Step 3: Use Targeting Attributes
+
+You can specify attributes about the current user and request. These are used for two things:
+
+1.  Feature targeting (e.g. paid users get one value, free users get another)
+2.  Assigning persistent variations in A/B tests (e.g. user id "123" always gets variation B)
+
+The following are some comonly used attributes, but use whatever makes sense for your application.
+
+```ts
+new GrowthBook({
+  attributes: {
+    id: "123",
+    environment: "prod",
+    loggedIn: true,
+    deviceId: "abc123def456",
+    company: "acme",
+    paid: false,
+    url: "/pricing",
+    browser: "chrome",
+    mobile: false,
+    country: "US",
+  },
+});
+```
+
+If you need to set or update attributes asynchronously, you can do so with `setAttributes()`. This will completely overwrite the attributes object with whatever you pass in. Also, be aware that changing attributes may change the assigned feature values. This can be disorienting to users if not handled carefully.
+
+### Step 4: Set up a Tracking Callback
+
+Any time an experiment is run to determine the value of a feature, we call a function so you can record the assigned value in your event tracking or analytics system of choice.
+
+```ts
+new GrowthBook({
+  trackingCallback: (experiment, result) => {
+    // Example using Segment.io
+    analytics.track("Experiment Viewed", {
+      experimentId: experiment.key,
+      variationId: result.variationId,
+    });
+  },
+});
+```
+
+## Inline Experiments
+
+Depending on how you configure feature flags, they may run A/B tests behind the scenes to determine which value gets assigned to the user.
+
+Sometimes though, you want to run an inline experiment without going through a feature flag first. For this, you can use either the `useExperiment` hook or the Higher Order Component `withRunExperiment`:
+
+### useExperiment hook
 
 ```tsx
 import { useExperiment } from "@growthbook/growthbook-react";
@@ -57,14 +162,14 @@ export default function OtherComponent() {
 }
 ```
 
-#### Class Components
+### Class Components
 
 **Note:** This library uses hooks internally, so still requires React 16.8 or above.
 
 ```tsx
 import { withRunExperiment } from "@growthbook/growthbook-react";
 
-class OtherComponent extends Component {
+class OtherComponent extends React.Component {
   render() {
     // The `runExperiment` prop is identical to the `useExperiment` hook
     const { value } = this.props.runExperiment({
@@ -77,36 +182,3 @@ class OtherComponent extends Component {
 // Wrap your component in `withRunExperiment`
 export default withRunExperiment(OtherComponent);
 ```
-
-## Configuration and Usage
-
-This package is a small React wrapper around the [Javascript client library](/lib/js). Check those docs for configuration options and more experiment usage examples.
-
-## Dev Mode
-
-You can add the GrowthBook Dev Mode widget to make development and testing easier.
-
-Install the dev mode widget with `npm install --save-dev @growthbook/dev` or `yarn install --dev @growthbook/dev`.
-
-Then render the `GrowthBookDev` component inside of the GrowthBookProvider
-
-```tsx
-import { GrowthBookDev } from "@growthbook/dev";
-
-function MyApp() {
-  return (
-    <GrowthBookProvider growthbook={...}>
-      <OtherComponent />
-      <GrowthBookDev/>
-    </GrowthBookProvider>
-  )
-}
-```
-
-and you should see the Dev Mode widget on the bottom-left of your screen
-
-![Dev Mode Variation Switcher](/images/variation-switcher.png)
-
-## Configuration and Usage
-
-This package is a small React wrapper around the [javascript client library](/lib/js). Look at those docs for more info on how to configure your GrowthBook instance and define Experiments.
