Fix broken mdx code for docs

--- a/packages/docs/pages/lib/react.mdx
+++ b/packages/docs/pages/lib/react.mdx
@@ -64,7 +64,7 @@ export default function OtherComponent() {
 }
 ```
 
-#### <IfFeatureEnabled>
+#### IfFeatureEnabled component
 
 ```tsx
 import { IfFeatureEnabled } from "@growthbook/growthbook-react";
@@ -81,7 +81,7 @@ export default function OtherComponent() {
 }
 ```
 
-#### <FeatureString>
+#### FeatureString component
 
 ```tsx
 import { FeatureString } from "@growthbook/growthbook-react";
