More fixes from code review

--- a/packages/docs/pages/app/api.mdx
+++ b/packages/docs/pages/app/api.mdx
@@ -1,6 +1,6 @@
 # API
 
-The API is one way to keep cached experiment overrides and feature flags up-to-date on your servers.
+The API is one way to keep cached experiment overrides and features up-to-date on your servers.
 
 With the **API**, your servers pull configs from GrowthBook in a cronjob (or similar).
 
