--- a/packages/docs/pages/app/features.mdx
+++ b/packages/docs/pages/app/features.mdx
@@ -98,20 +98,28 @@ In advanced mode, you can specify conditions using the MongoDB query syntax. Thi
 
 The simplest type of override rule is a "Force" rule. This forces everyone who matches the condition to get the specified value. For example, you could have a feature default to OFF and use force rules to turn it ON for a specific list of countries.
 
-Force rules are most useful when you already know exactly what value you want to assign to each user.
+Force rules are most useful when you want to target a specific value to a subset of users. For example, you want beta users to get the new value and everyone else to get the old value.
 
 ### Rollout Rules
 
-The other type of rule is a percentage rollout. This randomly splits users into buckets, assigns them different values, and tracks that assignment in your data warehouse or analytics tool.
+Percent rollout rules let you gradually release a feature value to a random sample of your users.
 
-Rollouts are most useful when you aren't sure which value to assign yet (A/B test) or you want to make sure a new feature doesn't break anything (gradually release).
+Rollouts are most useful when you want to make sure a new feature doesn't break your app or site. You start by releasing to maybe 10% of users. Then after a while if your metrics look ok, you increase to 30% and so on.
 
-Here's what a Percent Rollout rule looks like in the GrowthBook UI:
+For rollout rules, you choose a user attribute to use for the random sample. Users with the same attribute value will be treated the same (either included or not included in the rollout). For example, if you choose a "company" attribute, then multiple employees in the same company will get the same experience.
 
-![Rollout rule](/images/rollout-rule.png)
+### Experiment Rules
+
+The last type of rule is an Experiment. This randomly splits users into buckets, assigns them different values, and tracks that assignment in your data warehouse or analytics tool.
+
+Experiments are most useful when you aren't sure which value to assign yet.
+
+Here's what an Experiment rule looks like in the GrowthBook UI:
+
+![Experiment rule](/images/experiment-rule.png)
 
 In the vast majority of cases, you want to split traffic based on either a logged-in user id or some sort of anonymous identifier like a device id or session cookie. As long as the user has the same value for this attribute, they will always get assigned the same variation. In rare cases, you may want to use an attribute such as company or account instead, which ensures all users in a company will see the same thing.
 
-If the total rollout values add up to less than 100%, the remaining users will skip the rule and fall through to the next matching one (or the default value) instead.
+If the total variation percents add up to less than 100%, the remaining users will skip the rule and fall through to the next matching one (or the default value) instead.
 
-You can analyze the result of a Rollout the same way you would any experiment in GrowthBook.
+You can analyze the result of an Experiment the same way you would any experiment in GrowthBook.
