Fixes from testing

--- a/packages/docs/pages/app/features.mdx
+++ b/packages/docs/pages/app/features.mdx
@@ -12,6 +12,8 @@ better.
 
 Every feature is defined by a unique **key**. This is what the engineering team will reference in their code when they check the value of a feature. Feature keys cannot be changed after they are created, so take care when choosing one.
 
+Feature keys must be all lowercase and include only letters, numbers, hyphens, and underscores.
+
 Some examples of good feature keys:
 
 - `onboarding-checklist` - ON/OFF flag for a feature
