--- a/packages/docs/pages/lib/build-your-own.mdx
+++ b/packages/docs/pages/lib/build-your-own.mdx
@@ -143,11 +143,11 @@ A Feature object consists of possible values plus rules for how to assign values
 ### FeatureRule
 
 - **condition** (`Condition`) - Optional targeting condition
-- **force** (`any`) - Immediately force a specific value (ignore every other option besides condition)
+- **coverage** (`number`) - What percent of users should be included in the experiment (between 0 and 1, inclusive)
+- **force** (`any`) - Immediately force a specific value (ignore every other option besides condition and coverage)
 - **variations** (`any[]`) - Run an experiment (A/B test) and randomly choose between these variations
 - **trackingKey** (`string`) - The globally unique tracking key for the experiment (default to the feature key)
 - **weights** (`number[]`) - How to weight traffic between variations. Must add to 1.
-- **coverage** (`number`) - What percent of users should be included in the experiment (between 0 and 1, inclusive)
 - **namespace** (`(string, number, number)`) - A tuple that contains the namespace identifier, plus a range of coverage for the experiment.
 - **hashAttribute** (`string`) - What user attribute should be used to assign variations (defaults to `id`)
 
@@ -179,7 +179,15 @@ There are a few ordered steps to evaluate a feature
 1. If the key doesn't exist in `context.features`, return immediately (value = `null`, source = `unknownFeature`).
 2. Loop through the feature rules (if any)
    1. If the rule has a `condition` and it evaluates to false, skip this rule and continue to the next one
-   2. If `rule.force` is set, return immediately (value = forced value, source = `force`)
+   2. If `rule.force` is set
+      1. If `rule.coverage` is set
+         1. Get the user hash value (`context.attributes[experiment.hashAttribute || "id"]`) and if empty, skip the rule
+         2. Compute a hash using the [Fowler–Noll–Vo](https://en.wikipedia.org/wiki/Fowler%E2%80%93Noll%E2%80%93Vo_hash_function) algorithm (specifically fnv32-1a)
+            ```js
+            n = (fnv32_1a(hashValue + featureKey) % 1000) / 1000;
+            ```
+         3. If the hash is greater than `rule.coverage`, skip the rule
+      2. Return (value = forced value, source = `force`)
    3. Otherwise, convert the rule to an Experiment object
       ```ts
       const exp = {
