--- a/packages/docs/pages/app/features.mdx
+++ b/packages/docs/pages/app/features.mdx
@@ -125,3 +125,48 @@ In the vast majority of cases, you want to split traffic based on either a logge
 If the total variation percents add up to less than 100%, the remaining users will skip the rule and fall through to the next matching one (or the default value) instead.
 
 You can analyze the result of an Experiment the same way you would any experiment in GrowthBook.
+
+## Integration Options
+
+There are few ways to integrate GrowthBook features into your application.
+
+At a high level, the features you create in the GrowthBook UI can be rendered as a single JSON feature definitions file. The contents of this JSON file must be passed into the SDK. Any feature flags evaluated before the JSON file loads will have a value of `null`, so it's important to load the features quickly.
+
+There is a public GrowthBook API endpoint for the feature definitions JSON:
+
+- https://cdn.growthbook.io/api/features/{MY_API_KEY} (GrowthBook Cloud)
+- http://localhost:3100/api/features/{MY_API_KEY} (Self-hosted)
+
+The API includes a cache header with a 30-second TTL (plus stale-while-revalidate and stale-if-error headers).
+
+### Load directly (client-side)
+
+You can use `window.fetch` (or similar) to fetch from the API when your app first loads on the client:
+
+```js
+fetch(`https://cdn.growthbook.io/api/features/${MY_API_KEY}`)
+  .then((res) => res.json())
+  .then((json) => {
+    growthbook.setFeatures(json.features);
+  });
+```
+
+For self-hosted deployments, we highly recommend using a CDN like Fastly or CloudFlare. The GrowthBook API alone is not meant to serve large amounts of production traffic.
+
+The downside of this approach is that you're adding a network request into your critical rendering path. If the HTTP request is slow (or if the API crashes) for whatever reason, your user experience will suffer.
+
+### Cache in Redis/Memcached/etc.
+
+You can keep your own copy of the feature definition JSON within a cache system like Redis or Memcached. To keep your cache up-to-date, you can poll the GrowthBook API endpoint every few minutes.
+
+There are two benefits to this approach. First, reading from a cache is usually orders of magnitude faster than an HTTP fetch request. Second, you are protected in case the API goes down or is slow for whatever reason.
+
+The downside is that if you currently don't have a cache system, this approach increases complexity of your stack. Also, your polling script to keep the cache up-to-date could fail without you knowing about it and features could get out of date.
+
+### Load at build-time
+
+Another approach is to fetch the feature definitions JSON once at build time and bundle them with your app.
+
+This is the fastest approach since it avoids all 3rd party requests entirely. Once your app is built, loading features for each request is almost instant.
+
+The downside is that in order to update feature defintiions, you need to create a new build of your app. If you need to turn off a feature quickly (in case of a bug) this may be a problem.
