--- a/packages/docs/pages/lib/build-your-own.mdx
+++ b/packages/docs/pages/lib/build-your-own.mdx
@@ -12,7 +12,7 @@ There are a number of important data structures in GrowthBook client libraries.
 
 ### Condition
 
-Targeting condition based on MongoDB query syntax. For example:
+Targeting condition based on MongoDB query syntax. This is a recursive JSON object with arbitrary nesting levels.  For example:
 
 ```ts
 {
@@ -27,8 +27,6 @@ Targeting condition based on MongoDB query syntax. For example:
   }
 }
 ```
-
-For details on parsing and evaluating these conditions, view the [reference Typescript implementation](https://github.com/growthbook/growthbook/tree/main/packages/sdk-js/src/mongrule.ts) (~200 lines of code).
 
 ### Context
 
@@ -181,7 +179,7 @@ There are a few ordered steps to evaluate a feature
    1. If the rule has a `condition` and it evaluates to false, skip this rule and continue to the next one
    2. If `rule.force` is set
       1. If `rule.coverage` is set
-         1. Get the user hash value (`context.attributes[experiment.hashAttribute || "id"]`) and if empty, skip the rule
+         1. Get the user hash value (`context.attributes[rule.hashAttribute || "id"]`) and if empty, skip the rule
          2. Compute a hash using the [Fowler–Noll–Vo](https://en.wikipedia.org/wiki/Fowler%E2%80%93Noll%E2%80%93Vo_hash_function) algorithm (specifically fnv32-1a)
             ```js
             n = (fnv32_1a(hashValue + featureKey) % 1000) / 1000;
@@ -270,6 +268,159 @@ There are a bunch of ordered steps to run an experiment:
 16. If `context.qaMode` is true, return immediately (not in experiment, variationId `0`)
 17. Fire `context.trackingCallback` if set and the combination of hashAttribute, hashValue, experiment.key, and variationId has not been tracked before
 18. Return (**in experiment**, assigned variation)
+
+## Evaluating Conditions
+
+Both experiments and features can define targeting conditions using a syntax modeled after MongoDB queries.
+
+These conditions can have arbitrary nesting levels and evaluating them requires recursion. There are a handful of functions to define, and be aware that some of them may reference function definitions further below.
+
+There are many test cases for the Javascript SDK in [mongrule.test.ts](https://github.com/growthbook/growthbook/blob/main/packages/sdk-js/test/mongrule.test.ts). Make sure your implementation passes all of these.
+
+### evalCondition(attributes, conditionObj): boolean
+
+This is the main function used to evaluate a condition.
+
+1. If conditionObj has a key `$or`, return `evalOr(attributes, condition["$or"])`
+2. If conditionObj has a key `$nor`, return `!evalOr(attributes, condition["$nor"])`
+3. If conditionObj has a key `$and`, return `!evalAnd(attributes, condition["$and"])`
+4. If conditionObj has a key `$not`, return `!evalCondition(attributes, condition["$not"])`
+5. Loop through the conditionObj key/value pairs
+   1. If `evalConditionValue(value, getPath(attributes, key))` is false, break out of loop and return false
+6. Return true
+
+### evalOr(attributes, conditionObjs): boolean
+
+`conditionObjs` is an array of parsed condition objects
+
+1. If conditionObjs is empty, return true
+2. Loop through the conditionObjects
+   1. If `evalCondition(attributes, conditionObjs[i])` is true, break out of the loop and return true
+3. Return false
+
+### evalAnd(attributes, conditionObjs): boolean
+
+`conditionObjs` is an array of parsed condition objects
+
+1. Loop through the conditionObjects
+   1. If `evalCondition(attributes, conditionObjs[i])` is false, break out of the loop and return false
+2. Return true
+
+### isOperatorObject(obj): boolean
+
+This accepts a parsed JSON object as input and returns `true` if every key in the object starts with `$`.
+
+- `{"$gt": 1}` -> `true`
+- `{"$gt": 1, "$lt": 10}` -> `true`
+- `{"foo": "bar"}` -> `false`
+- `{"$gt": 1, "foo": "bar"}` -> `false`
+
+### getType(attributeValue): string
+
+This returns the data type of the passed in argument.
+
+The valid types to return are:
+- `string`
+- `number`
+- `boolean`
+- `array`
+- `object`
+- `null`
+- `undefined`
+- `unknown`
+
+The difference between `null` and `undefined` can be illustrated as follows:
+
+```ts
+obj = JSON.parse('{"foo": null}')
+
+getType(obj["foo"]) // null
+
+getType(obj["bar"]) // undefined
+```
+
+The value `unknown` is there just in case you can't figure out the data type for whatever reason. It will never be used in most implementations.
+
+### getPath(attributes, path): any
+
+Given attributes and a dot-separated path string, return the value at that path (or `null`/`undefined` if the path doesn't exist)
+
+Given the input:
+
+```json
+{
+  "name": "john",
+  "job": {
+    "title": "developer"
+  }
+}
+```
+
+It should return:
+
+-  `getPath(input, "name")` -> `"john"`
+-  `getPath(input, "job.title")` -> `"developer"`
+-  `getPath(input, "job.company")` -> `null` or `undefined`
+
+### evalConditionValue(conditionValue, attributeValue): boolean
+
+1. If `conditionValue` is a string, number, boolean, or array, return true if it's "equal" to `attributeValue` and false if not.  "equal" should do a deep comparison for arrays.
+2. If `conditionValue` is an object, loop over each key/value pair:
+   1. If `evalOperatorCondition(key, attributeValue, value)` is false, return false
+3. Return true
+
+### elemMatch(condition, attributeValue): boolean
+
+This checks if `attributeValue` is an array, and if so at least one of the array items must match the condition
+
+1. If `attributeValue` is not an array, return false
+2. Loop through items in `attributeValue`
+  1. If `isOperatorValue(condition)`
+    1. If `evalConditionValue(condition, item)`, break out of loop and return true
+  2. Else if `evalCondition(item, condition)`, break out of loop and return true
+3. Return false
+
+### evalOperatorCondition(operator, attributeValue, conditionValue)
+
+This function is just a case statement that handles all the possible operators
+
+There are basic comparison operators in the form `attributeValue {op} conditionValue`:
+
+- `$eq` ==
+- `$ne` != (not equals)
+- `$lt` &lt;
+- `$lte` &lt;=
+- `$gt` &gt;
+- `$gte` &gt;=
+- `$regex` ~ (regex match)
+
+There are three operators where conditionValue is an array:
+
+- `$in` - attributeValue in the conditionValue array
+- `$nin` - attributeValue not in the conditionValue array
+- `$all`
+  1. If attributeValue is not an array, return false
+  2. Loop through conditionValue array
+     1. If none of the elements in the attributeValue array pass `evalConditionValue(conditionValue[i], attributeValue[j])`, return false
+  3. Return true
+
+There are 3 operators where attributeValue is an array:
+
+- `$elemMatch` - return `elemMatch(conditionValue, attributeValue)`
+- `$size`
+   1. If attributeValue is not an array, return false
+   2. Return `evalConditionValue(conditionValue, attributeValue.length)`
+
+There are 3 other operators:
+
+- `$exists`
+  1. If conditionValue is false, return true if attributeValue is null or undefined
+  2. Else, return true if attributeValue is NOT null or undefined
+  3. Return false by default
+- `$type` - return `getType(attributeValue) == conditionValue`
+- `$not` - recursive rule. Return `!evalConditionValue(conditionValue, attributeValue)`
+
+If operator doesn't match any of these, return false and potentially log the error for debug purposes.
 
 ## Developer Experience
 
